Conflict resolution and fixes to prevent potential leaks (memory, connection)